RC: Add TabLoadTracker transition to UNLOADED when a tab's main frame renderer dies.

Previously when a renderer died, e.g. crash/sad tab or OOM killed on
Android, there was not a transition to UNLOADED. In these cases the
WebContents is not destroyed, so the LOADING/LOADED tab counts would be
inflated.

Bug: 861800
Change-Id: I9d216d16d89d32a5ca11d1e1b901a1168c80d624
Reviewed-on: https://chromium-review.googlesource.com/1129373
Commit-Queue: Scott Haseley <shaseley@google.com>
Reviewed-by: François Doray <fdoray@chromium.org>
Reviewed-by: Chris Hamilton <chrisha@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573889}