chrome/browser/resource_coordinator/tab_helper.h
@@ -9,6 +9,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <memory>
 
 #include "base/macros.h"
+#include "base/process/kill.h"
 #include "base/time/time.h"
 #include "build/build_config.h"
 #include "content/public/browser/web_contents_observer.h"
@@ -41,6 +42,7 @@ class ResourceCoordinatorTabHelper
                    const GURL& validated_url,
                    int error_code,
                    const base::string16& error_description) override;
+  void RenderProcessGone(base::TerminationStatus status) override;
   void OnVisibilityChanged(content::Visibility visibility) override;
   void WebContentsDestroyed() override;
   void DidFinishNavigation(
