chrome/browser/resource_coordinator/tab_load_tracker_unittest.cc
@@ -5,10 +5,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "chrome/browser/resource_coordinator/tab_load_tracker.h"
 
+#include "base/process/kill.h"
 #include "base/strings/utf_string_conversions.h"
 #include "base/test/scoped_feature_list.h"
 #include "chrome/test/base/chrome_render_view_host_test_harness.h"
 #include "content/public/browser/web_contents_observer.h"
+#include "content/public/test/mock_render_process_host.h"
 #include "content/public/test/web_contents_tester.h"
 #include "services/resource_coordinator/public/cpp/resource_coordinator_features.h"
 #include "testing/gmock/include/gmock/gmock.h"
@@ -30,6 +32,7 @@ class TestTabLoadTracker : public TabLoadTracker {
   using TabLoadTracker::DidReceiveResponse;
   using TabLoadTracker::DidStopLoading;
   using TabLoadTracker::DidFailLoad;
+  using TabLoadTracker::RenderProcessGone;
   using TabLoadTracker::OnPageAlmostIdle;
   using TabLoadTracker::DetermineLoadingState;
 
@@ -87,6 +90,9 @@ class TestWebContentsObserver : public content::WebContentsObserver {
                    int error_code,
                    const base::string16& error_description) override {
     tracker_->DidFailLoad(web_contents());
+  }
+  void RenderProcessGone(base::TerminationStatus status) override {
+    tracker_->RenderProcessGone(web_contents(), status);
   }
 
  private:
@@ -247,6 +253,18 @@ void TabLoadTrackerTest::StateTransitionsTest(bool enable_pai) {
   tester1->TestDidFailLoadWithError(GURL("http://baz.com"), 500,
                                     base::UTF8ToUTF16("server error"));
   ExpectTabCounts(3, 0, 0, 3);
+  testing::Mock::VerifyAndClearExpectations(&observer());
+
+  // Crash the render process corresponding to the main frame of a tab. This
+  // should cause the tab to transition to the UNLOADED state.
+  EXPECT_CALL(observer(),
+              OnLoadingStateChange(contents1(), LoadingState::LOADED,
+                                   LoadingState::UNLOADED));
+  content::MockRenderProcessHost* rph =
+      static_cast<content::MockRenderProcessHost*>(
+          contents1()->GetMainFrame()->GetProcess());
+  rph->SimulateCrash();
+  ExpectTabCounts(3, 1, 0, 2);
   testing::Mock::VerifyAndClearExpectations(&observer());
 }
 
